--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,5 +27,13 @@ pipeline {
                 }
             }
         }
+        stage ("Creds") {
+            steps {
+                sh '''
+                    aws --version
+                    aws ec2 describe-route-tables --route-table-ids rtb-057559b8a0beebf1b > current-routes.json
+                '''
+            }
+        }
     }
 }
